--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="" class="dark-2"><button class="btn-primary">Hire Me</button></a></li>
             </ul>
         </nav>
-        <div class="banner">
+        <div class="banner open-sans-portfolio">
             <div class="banner-content">
                 <h4 class="banner-greetings">Hi, I am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
@@ -33,7 +33,32 @@
         </div>
     </header>
     <main>
-
+        <section class="about secondary-bg">
+            <div class="about-info">
+                <h3 class="section-title">About Me</h3>
+                <p class="section-description">
+                    I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+                </p>
+                <div class="about-items">
+                    <div class="about-item">
+                        <p class="item-title">Name:</p>
+                        <p class="item-description">Mary Hardy</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">Email:</p>
+                        <p class="item-description">info@gmail.com</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">Date of birth:</p>
+                        <p class="item-description">11 November 1987</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">From:</p>
+                        <p class="item-description">Los Angeles, USA</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
