--- a/index.html
+++ b/index.html
@@ -144,8 +144,26 @@
            </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h4 class="section-title">Lets Connect</h4>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-media">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h4 class="section-title">Let's Inbox me</h4>
+            <form action="">
+                <input type="text" name="" placeholder="Your Name" id="">
+                <input type="email" name="" placeholder="Your Email" id="">
+                <textarea name="" id="" cols="30" rows="40"></textarea>
+            </form>
+            <button class="btn-primary" type="submit">Submit</button>
+        </div>
+        
     </footer>
 </body>
 </html>
