--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/cda35c64bc.js" crossorigin="anonymous"></script>
 </head>
 <body class="opans-sans-portfolio">
     <header class="header">
@@ -26,8 +27,8 @@
                 <p class="banner-description">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -159,7 +160,7 @@
             <form action="">
                 <input type="text" name="" placeholder="Your Name" id="">
                 <input type="email" name="" placeholder="Your Email" id="">
-                <textarea name="" id="" cols="30" rows="40"></textarea>
+                <textarea name="" placeholder="Message" cols="30" rows="40"></textarea>
             </form>
             <button class="btn-primary" type="submit">Submit</button>
         </div>
